--- a/package.json
+++ b/package.json
@@ -16,5 +16,19 @@
   "bugs": {
     "url": "https://github.com/safar1212/Book-keeping-solo-project/issues"
   },
-  "homepage": "https://github.com/safar1212/Book-keeping-solo-project#readme"
+  "homepage": "https://github.com/safar1212/Book-keeping-solo-project#readme",
+  "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "hint": "^6.2.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
+  },
+  "dependencies": {
+    "luxon": "^2.4.0"
+  }
 }
